# SonLE

./: CMakeLists.txt  main.cpp
src/: main.cpp  partOne.cpp  partOne.hpp  partTwo.cpp  partTwo.hpp  someFunc.cpp  someFunc.hpp  someFunc1.cpp  someFunc2.cpp
